[css] Fix alignment of tables #6331

--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -263,7 +263,7 @@ a
     border: none
     background: $card-header-bg
     color: $dark-white
-    padding: 0.75rem 1.25rem
+    padding: 0.22rem 1.0rem
 
     @include font-scale(md)
 
